<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item

        android:id = "@+id/sorting"
        android:title = "Sort"
        android:icon = "@drawable/white_sort_icon_70dp"
        app:showAsAction="always"

        />

   


    <item

        android:id = "@+id/records"
        android:title = "@string/records"
        android:icon = "@drawable/white_color_history_70dp"
        app:showAsAction="ifRoom"

        />


    <item

        android:id = "@+id/aboutus"
        android:title = "@string/AboutUs"

        app:showAsAction="ifRoom"
        android:icon = "@drawable/white_profile_icon_70dp"


        />

</menu>