<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="450dp"
        android:alpha="0"
        android:fontFamily="sans-serif-condensed-medium"
        android:lineSpacingExtra="24sp"
        android:text="@string/S"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_logo" />

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="70dp"
        android:alpha="0"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/welcome_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/small_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>